hphp/hack/test/typecheck/delay_in_sync_lambda.php
<?hh
// (c) Meta Platforms, Inc. and affiliates. Confidential and proprietary.

async function bar(): Awaitable<int> {
  return 1;
}

function foo(): void {
  $f = () ==> {
    delay bar();
  };
}
